<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- bottom_nav_menu.xml -->
    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

    <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
    <item
            android:id="@+id/nav_camera_placeholder"
            android:enabled="false"
            android:title="" />

    <item
            android:id="@+id/nav_my_garden"
            android:icon="@drawable/ic_chat_bot"
            android:title="@string/nav_my_garden" />

    <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />

</menu>