<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_rounded"
        android:backgroundTint="#FAFAFA"
        android:padding="16dp"
        app:columnCount="2"
        app:rowCount="7">

    <TextView
            android:text="@string/label_kingdom"
            style="@style/TaxonomyLabelStyle"
            app:layout_columnWeight="0.4" />
    <TextView
            android:id="@+id/tvKingdom"
            tools:text="Plantae"
            style="@style/TaxonomyValueStyle"
            app:layout_columnWeight="0.6" />

    <TextView
            android:text="@string/label_phylum"
            style="@style/TaxonomyLabelStyle"
            app:layout_columnWeight="0.4" />
    <TextView
            android:id="@+id/tvPhylum"
            tools:text="Tracheophyta"
            style="@style/TaxonomyValueStyle"
            app:layout_columnWeight="0.6" />

    <TextView
            android:text="@string/label_class"
            style="@style/TaxonomyLabelStyle"
            app:layout_columnWeight="0.4" />
    <TextView
            android:id="@+id/tvClass"
            tools:text="Magnoliopsida"
            style="@style/TaxonomyValueStyle"
            app:layout_columnWeight="0.6" />

    <TextView
            android:text="@string/label_order"
            style="@style/TaxonomyLabelStyle"
            app:layout_columnWeight="0.4" />
    <TextView
            android:id="@+id/tvOrder"
            tools:text="Rosales"
            style="@style/TaxonomyValueStyle"
            app:layout_columnWeight="0.6" />

    <TextView
            android:text="@string/label_family"
            style="@style/TaxonomyLabelStyle"
            app:layout_columnWeight="0.4" />
    <TextView
            android:id="@+id/tvFamily"
            tools:text="Rosaceae"
            style="@style/TaxonomyValueStyle"
            app:layout_columnWeight="0.6" />

    <TextView
            android:text="@string/label_genus"
            style="@style/TaxonomyLabelStyle"
            app:layout_columnWeight="0.4" />
    <TextView
            android:id="@+id/tvGenus"
            tools:text="Rosa"
            style="@style/TaxonomyValueStyle"
            app:layout_columnWeight="0.6" />

    <TextView
            android:text="@string/label_species"
            style="@style/TaxonomyLabelStyle"
            android:layout_marginBottom="0dp"
            app:layout_columnWeight="0.4" />
    <TextView
            android:id="@+id/tvSpecies"
            tools:text="Rosa sp."
            style="@style/TaxonomyValueStyle"
            android:layout_marginBottom="0dp"
            app:layout_columnWeight="0.6" />

</androidx.gridlayout.widget.GridLayout>